# AOA-legacy

./: .env.example  .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
netlify/functions/: contact.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  contact.rs  email.rs  error.rs  invoices.rs  lib.rs  main.rs  projects.rs
src/components/: Header.tsx  Reveal.tsx
src/hooks/: useInView.ts  useTheme.ts
src/lib/: api.ts
src/sections/: About.tsx  Admin.tsx  Contact.tsx  Facilities.tsx  Footer.tsx  Hero.tsx  Projects.tsx  Services.tsx  Team.tsx
src/styles/: global.css
